[package]
name = "Xyrrokkin"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2018"
description = "GitHub bot for differences in file content after merges."
documentation = "https://github.com/Xithrius/Xyrrokkin"
homepage = "https://github.com/Xithrius/Xyrrokkin"
repository = "https://github.com/Xithrius/Xyrrokkin"
license = "MIT OR Apache-2.0"

[dependencies]
octocrab = "0.14.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "xyrrokkin"
