[package]
name = "Xyrrokkin"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2018"
description = "GitHub bot for differences in file content after merges."
documentation = "https://github.com/Xithrius/Xyrrokkin"
homepage = "https://github.com/Xithrius/Xyrrokkin"
repository = "https://github.com/Xithrius/Xyrrokkin"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = {version = "4.0.0-beta.14", features = ["openssl"]}
octocrab = "0.15.0"
toml = "0.5.8"
serde = { version = "1.0.131", features = ["derive"] }
anyhow = "1.0.50"
jsonwebtoken = "7.2.0"
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["multipart"]}
serde_json = "1.0.73"
json = "0.12.4"
log = "0.4.14"

[[bin]]
bench = false
path = "src/main.rs"
name = "xyrrokkin"
