[package]
name = "Xyrrokkin"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2018"
description = "GitHub bot for differences in file content after merges."
documentation = "https://github.com/Xithrius/Xyrrokkin"
homepage = "https://github.com/Xithrius/Xyrrokkin"
repository = "https://github.com/Xithrius/Xyrrokkin"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = {version = "4.0.0-beta.19", features = ["openssl"]}
octocrab = "0.15.3"
toml = "0.5.8"
serde = { version = "1.0.132", features = ["derive"] }
anyhow = "1.0.52"
jsonwebtoken = "7.2.0"
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["multipart"]}
serde_json = "1.0.75"
json = "0.12.4"
log = "0.4.14"

[[bin]]
bench = false
path = "src/main.rs"
name = "xyrrokkin"
